backend/output.txt
Main.java:8: error: ';' expected
            int size = scan.nextInt()
                                     ^
1 error
